# tacticsfinal

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
extlibs/ImGUI/: CMakeLists.txt  imconfig.h  imgui.h
include/: ai.hpp  astar.hpp  astarnode.hpp  battlescene.hpp  board.hpp  combatmanager.hpp  cursor.hpp  easingfunctions.hpp  game.hpp  map.hpp  maps.data.hpp  resourcemanager.hpp  resourcemanager.inl  scene.hpp  stats.hpp  team.hpp  terrain.hpp  tilemarkers.hpp  turnmanager.hpp  tween.hpp  tweener.hpp  unit.hpp  units.data.hpp  utils.hpp  xorshift.hpp
src/: ai.cpp  application.cpp  astar.cpp  astarnode.cpp  battlescene.cpp  board.cpp  combatmanager.cpp  cursor.cpp  game.cpp  map.cpp  scene.cpp  team.cpp  tilemarkers.cpp  turnmanager.cpp  tweener.cpp  unit.cpp  xorshift.cpp
